--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ yarn-debug.log*
 yarn-error.log*
 
 #mi rama dev
-.data.js
-.dataServices.js
-.db.json
-.SeeMoreButton.js
+data.js
+dataServices.js
+db.json
+SeeMoreButton.js
